create parcels
