# storage/api-docs/api-docs.json
@@ -63,6 +63,79 @@
                 }
             }
         },
+        "/api/parcels/create": {
+            "post": {
+                "tags": [
+                    "Parcels"
+                ],
+                "summary": "Create parcel",
+                "operationId": "832cfda815dfe14aaa0cdc7119183a7b",
+                "requestBody": {
+                    "description": "Data for creating a new parcel",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "code": {
+                                        "type": "string",
+                                        "example": "AC44BB13#TT"
+                                    },
+                                    "price": {
+                                        "type": "numeric",
+                                        "example": "12.33"
+                                    },
+                                    "quantity": {
+                                        "type": "numeric",
+                                        "example": "12"
+                                    },
+                                    "store_address": {
+                                        "type": "string",
+                                        "example": "test address"
+                                    },
+                                    "comment": {
+                                        "type": "string",
+                                        "example": "test comment"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/api/users": {
             "get": {
                 "tags": [
